<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatbot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".ChatbotFragment">

    <TextView
        android:id="@+id/tv_start_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatbot_greeting"
        android:textSize="36sp"
        android:textColor="#808080"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintBottom_toTopOf="@+id/layout_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chatbot"
        android:fontFamily="@font/pretendard_gov_semibold"
        android:textSize="24sp"
        android:textColor="#010101"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/button_delete_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_greeting"
        app:layout_constraintBottom_toBottomOf="@id/tv_greeting" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_chatbot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintBottom_toTopOf="@+id/layout_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_chat_message" />

    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_edittext_background_chatbot"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editText_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/chatbot_msg_input_hint"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:background="@android:color/transparent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <ImageButton
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>